--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,7 +4,92 @@
 body {
   margin: 0;
   padding: 0;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 16px;
 }
 img {
   max-width: 100%;
+}
+.container-box {
+  display: grid;
+  align-content: start;
+  width: 100%;
+  max-width: 900px;
+  margin: 50px auto 20px;
+  background-color: #fff;
+  box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+}
+.header {
+  padding: 25px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  border-bottom: 1px solid #e4dad5;
+  justify-content: space-between;
+  align-items: center;
+}
+.section-list {
+  background-color: #fbfbfd;
+  padding: 20px 0 30px;
+}
+.list-user {
+  max-width: 90%;
+  margin: auto;
+}
+.row {
+  display: grid;
+  grid-template-columns: 70px 1fr 100px;
+  color: #565656;
+}
+.row-text {
+  padding: 15px 20px;
+  margin: 20px 0;
+  background-color: #fff;
+  border-radius: 5px;
+  border: 1px solid #e4dad5;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.1);
+  align-items: center;
+}
+.col-action {
+  justify-self: end;
+}
+.title-user span {
+  font-weight: bold;
+  color: #565656;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 18px;
+}
+.header-list {
+  text-transform: uppercase;
+  font-weight: bold;
+  font-family: 'Montserrat', sans-serif;
+  background-color: none;
+  padding: 5px 20px;
+}
+.btn {
+  background-color: #c0a07d;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 10px 20px;
+  transition: 0.5s ease-in-out;
+  font-size: 16px;
+  font-weight: 500;
+  cursor: pointer;
+  font-family: 'Montserrat', sans-serif;
+}
+.btn i {
+  margin-right: 5px;
+}
+.btn:hover {
+  background-color: #73323f;
+}
+.btn-edit {
+  background-color: #73323f;
+  border-radius: 50%;
+  padding: 10px 8px 10px 12px;
+  text-align: center;
+}
+.btn-edit:hover {
+  background-color: #c0a07d;
 }
