--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -1,10 +1,107 @@
+@white: #fff;
+@gray-light: #e4dad5;
+@gray-extra-light: #fbfbfd;
+@gray-dark: #565656;
+@brown: #c0a07d;
+@vino: #73323f;
+@montserrat: 'Montserrat', sans-serif;
+
+
 * {
     box-sizing: content-box;
 }
 body{
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
 }
 img{
     max-width: 100%;
+}
+
+.container-box {
+	display: grid;
+	align-content: start;
+	width: 100%;
+	max-width: 900px;
+	margin: 50px auto 20px;
+	background-color: @white;
+	box-shadow: 0px 1px 5px rgba(0, 0, 0, 0.3);
+    border-radius: 5px;
+}
+
+.header {
+	padding: 25px;
+	display: grid;
+	grid-template-columns: repeat(2, auto);
+	border-bottom: 1px solid @gray-light;
+    justify-content: space-between;
+    align-items: center;
+}
+.section-list{
+    background-color: @gray-extra-light;
+    padding: 20px 0 30px;
+}
+.list-user {
+	max-width: 90%;
+    margin: auto;    
+}
+.row{
+    display: grid;
+    grid-template-columns: 70px 1fr 100px;
+    color: @gray-dark;
+}
+.row-text{
+    padding: 15px 20px;
+    margin: 20px 0;
+    background-color: @white;
+    border-radius: 5px;
+    border: 1px solid @gray-light;
+    box-shadow: 0px 2px 6px rgba(0,0,0,.1);
+    align-items: center;
+}
+.col-action{
+    justify-self: end;
+}
+.title-user span{
+    font-weight: bold;
+    color: @gray-dark;
+    font-family: @montserrat;
+    font-size: 18px;
+}
+.header-list{
+    text-transform: uppercase;
+    font-weight: bold;
+    font-family: @montserrat;
+    background-color: none;
+    padding: 5px 20px;
+}
+
+.btn{
+    background-color: @brown;
+    color: @white;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    transition: .5s ease-in-out;
+    font-size: 16px;
+    font-weight: 500;
+    cursor: pointer;
+    font-family: @montserrat;
+}
+.btn i{
+    margin-right: 5px;
+}
+.btn:hover{
+    background-color: @vino;
+}
+.btn-edit{
+    background-color: @vino;
+    border-radius: 50%;
+    padding: 10px 8px 10px 12px;
+    text-align: center;
+}
+.btn-edit:hover{
+    background-color: @brown;
 }
