--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -102,6 +102,95 @@ img{
     padding: 10px 8px 10px 12px;
     text-align: center;
 }
-.btn-edit:hover{
+.btn-delete{
+    background-color: @vino;
+}
+.btn-edit:hover, .btn-delete:hover{
     background-color: @brown;
+}
+
+// popup
+.popup{
+    background-color: rgba(0,0,0,.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    transition: .5s ease-in-out;
+    display: grid;
+    visibility: hidden;
+    opacity: 0;
+}
+.box{
+    background-color: @white;
+    padding: 50px;
+    position: relative;
+
+}
+.popup-active{
+    visibility: visible;
+    opacity: 1;
+}
+.btn-close{
+    background: none;
+    border: none;
+    color: @gray-dark;
+    font-size: 20px;
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+}
+// form
+.form-col{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-gap: 30px 20px;
+}
+.form-label{
+    display: block;
+    color: @gray-dark;
+    font-weight: bold;
+    margin-bottom: 5px;
+}
+.form-group input{
+    color: @gray-dark;
+}
+.input-text{
+    width: 100%;
+    box-sizing: border-box;
+    font-size: 16px;
+    line-height: 20px;
+    border: 1px solid @gray-light;
+    padding: 8px 10px;
+}
+.input-check{
+    display: grid;
+}
+
+.input-radio{
+    display: flex;
+}
+.input-check, .input-radio{
+    color: @gray-dark;
+}
+.content-btn-update{
+    justify-self: end;
+}
+.content-btn-add{
+    grid-column-start: 1;
+    grid-column-end: 3;
+    justify-self: center;
+}
+
+@media only screen and (max-width: 580px){
+    .form-col{
+        grid-gap: 20px;
+    }
+    .box{
+        padding: 30px 20px;
+    }
 }
