functionality with php

--- a/assets/css/main.less
+++ b/assets/css/main.less
@@ -112,7 +112,7 @@ img{
 // popup
 .popup{
     background-color: rgba(0,0,0,.3);
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -184,6 +184,13 @@ img{
     grid-column-start: 1;
     grid-column-end: 3;
     justify-self: center;
+}
+.res{
+    margin-top: 10px;
+    color: @vino;
+    font-weight: bold;
+    text-align: center;
+    font-size: 18px;
 }
 
 @media only screen and (max-width: 580px){
