--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -99,7 +99,7 @@ img {
 }
 .popup {
   background-color: rgba(0, 0, 0, 0.3);
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   width: 100%;
@@ -169,6 +169,13 @@ img {
   grid-column-start: 1;
   grid-column-end: 3;
   justify-self: center;
+}
+.res {
+  margin-top: 10px;
+  color: #73323f;
+  font-weight: bold;
+  text-align: center;
+  font-size: 18px;
 }
 @media only screen and (max-width: 580px) {
   .form-col {
